TDP-491: replace URL by URI to be less restrictive on URL validity (especialy exotic protocols)